Algolia fix on mobile

--- a/src/components/pages.css
+++ b/src/components/pages.css
@@ -7,17 +7,50 @@
 .pp-hero {
   display: flex;
 
+  @media (--medium-breakpoint-down) {
+    flex-direction: column-reverse;
+  }
+
   &__share {
     background: var(--color-light-gray);
     width: 17vw;
     height: 340px;
     position: relative;
 
+    @media (--medium-breakpoint-down) {
+      width: 100vw;
+      height: auto;
+      padding: 40px 1rem 20px;
+      background: white;
+    }
+
     &-content {
       position: absolute;
       right: 80px;
       padding-top: 60px;
       text-align: right;
+
+      ul {
+        margin: 0;
+        padding: 0;
+      }
+
+      @media (--medium-breakpoint-down) {
+        position: relative;
+        text-align: left;
+        right: auto;
+        padding: 0;
+        display: flex;
+
+        li {
+          display: inline-block;
+          margin-right: 15px;
+
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
     }
 
     h4 {
@@ -26,6 +59,11 @@
       font-size: 16px;
       line-height: 22px;
       font-family: var(--font-regular-bold);
+
+      @media (--medium-breakpoint-down) {
+        margin-top: 8px;
+        margin-right: 15px;
+      }
     }
 
     li {
@@ -38,6 +76,11 @@
     height: 540px;
     width: 83vw;
     position: relative;
+
+    @media (--medium-breakpoint-down) {
+      width: 100vw;
+      height: auto;
+    }
   }
 
   &__meta {
@@ -47,10 +90,21 @@
     bottom: -100px;
     left: 140px;
     right: 0;
+
+    @media (--medium-breakpoint-down) {
+      left: 0;
+      bottom: 0;
+      margin-top: 400px;
+      position: relative;
+    }
   }
 
   &__meta-content {
     max-width: 680px;
+
+    @media (--medium-breakpoint-down) {
+      max-width: 100%;
+    }
   }
 
   &__category {
@@ -94,12 +148,25 @@
   padding-bottom: 70px;  
   display: flex;
   justify-content: space-between;
+
+  @media (--medium-breakpoint-down) {
+    flex-direction: column-reverse;
+    padding-top: 0;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 
 .pp-related {
   padding-left: 8vw;
   padding-top: 20px;
   width: 300px;
+
+  @media (--medium-breakpoint-down) {
+    width: 100%;
+    padding-top: 40px;
+    padding-left: 0;
+  }
 
   &__title {
     position: relative;
@@ -159,8 +226,17 @@
   width: calc(83vw - 200px);
   padding-right: 60px;
 
+  @media (--medium-breakpoint-down) {
+    width: 100%;
+    padding-right: 0;
+  }
+
   &__inner {
     max-width: 680px;
+
+    @media (--medium-breakpoint-down) {
+      max-width: 100%;
+    }
   }
 
   p:first-child:first-letter {
@@ -190,6 +266,10 @@
     font-size: var(--font-size-h4);
     line-height: var(--line-height-h4);
     position: relative;
+
+    @media (--medium-breakpoint-down) {
+      padding: 40px 40px 40px 70px;
+    }
   }
 
   blockquote:before {
@@ -202,6 +282,10 @@
     line-height: 0.1em;
     margin-right: 0.25em;
     vertical-align: -0.4em;
+
+    @media (--medium-breakpoint-down) {
+      left: 25px;
+    }
   }
 
   blockquote p {
@@ -247,12 +331,25 @@
 .pp-explore {
   background: var(--color-light-gray);
   width: var(--width-max-container);
+  max-width: 100%;
   margin: 0 auto 50px;
   padding: 100px 60px 60px 60px;
+
+  @media (--medium-breakpoint-down) {
+    padding: 50px 1rem;
+  }
 
   h2 {
     color: var(--color-blue);
     padding-bottom: 30px;
+
+    @media (--medium-breakpoint-down) {
+      padding-bottom: 20px;
+    }
+  }
+
+  .ais-InfiniteHits {
+    margin-right: 0;
   }
 
   .ais-InfiniteHits-item {
